Avoid scrolling when entering fullscreen

When entering fullscreen we shouldn't need to set scroll to 0,0. This
fixes fullscreening an element that has scroll offset.

BUG=693075,684920

Change-Id: I2acf27eb2641731d580865d38e1a1495f6aee7de
Reviewed-on: https://chromium-review.googlesource.com/1191664
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587120}
Former-commit-id: 0de9638b5d008eb11b206187bf90a70bbf23857a